labs/lab6/src/Grammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from src/Grammar.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseHasquelito -> Expr                     (0)
	Expr -> let var '=' Expr in Expr                   (1)
	Expr -> '\\' var "->" Expr                         (2)
	Expr -> Expr "::" TypeExp "->" TypeExp             (3)
	Expr -> if Expr then Expr else Expr                (4)
	Expr -> Expr "==" Expr                             (5)
	Expr -> Expr ">=" Expr                             (6)
	Expr -> Expr "<=" Expr                             (7)
	Expr -> Expr "/=" Expr                             (8)
	Expr -> Expr '>' Expr                              (9)
	Expr -> Expr '<' Expr                              (10)
	Expr -> Expr "&&" Expr                             (11)
	Expr -> Expr "||" Expr                             (12)
	Expr -> Expr ':' Expr                              (13)
	Expr -> Expr "++" Expr                             (14)
	Expr -> List                                       (15)
	Expr -> Form                                       (16)
	Form -> Form '+' Form                              (17)
	Form -> Form '-' Form                              (18)
	Form -> Form '*' Form                              (19)
	Form -> Form '/' Form                              (20)
	Form -> Juxt                                       (21)
	Juxt -> Juxt Atom                                  (22)
	Juxt -> quot Atom Atom                             (23)
	Juxt -> rem Atom Atom                              (24)
	Juxt -> '-' Atom                                   (25)
	Juxt -> Atom                                       (26)
	Atom -> '(' Expr ')'                               (27)
	Atom -> int                                        (28)
	Atom -> bool                                       (29)
	Atom -> float                                      (30)
	Atom -> var                                        (31)
	TypeExp -> PrimType                                (32)
	TypeExp -> TypeExp "->" TypeExp                    (33)
	TypeExp -> '(' TypeExp ')'                         (34)
	PrimType -> Bool                                   (35)
	PrimType -> Int                                    (36)
	PrimType -> Float                                  (37)
	List -> '[' ListMembers ']'                        (38)
	ListMembers ->                                     (39)
	ListMembers -> Atom                                (40)
	ListMembers -> Atom ',' ListMembers                (41)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	Int            { INT p }
	Bool           { BOOL p }
	Float          { FLOAT p }
	int            { INTVAL p $$ }
	float          { FLOATVAL p $$ }
	bool           { BOOLVAL p $$ }
	let            { LET p }
	in             { IN p }
	if             { IF p }
	then           { THEN p }
	else           { ELSE p }
	'\\'           { LAMBDA p }
	"->"           { ARROW p }
	"::"           { COLONS p }
	"&&"           { AND p }
	"||"           { OR p }
	'='            { BIND p }
	'+'            { PLUS p }
	'-'            { MINUS p }
	'*'            { TIMES p }
	'/'            { DIVIDE p }
	quot           { QUOT p }
	rem            { REM p }
	"=="           { EQUALS p }
	">="           { GTEQ p }
	"<="           { LTEQ p }
	"/="           { NOTEQ p }
	'>'            { GT' p }
	'<'            { LT' p }
	'('            { LPAREN p }
	')'            { RPAREN p }
	var            { VAR p $$ }
	'['            { LBRACK p }
	']'            { RBRACK p }
	':'            { COLON p }
	','            { COMMA p }
	"++"           { PLUSPLUS p }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseHasquelito rule  0
	Expr            rules 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16
	Form            rules 17, 18, 19, 20, 21
	Juxt            rules 22, 23, 24, 25, 26
	Atom            rules 27, 28, 29, 30, 31
	TypeExp         rules 32, 33, 34
	PrimType        rules 35, 36, 37
	List            rule  38
	ListMembers     rules 39, 40, 41

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	if             shift, and enter state 11
	'\\'           shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18

	Expr           goto state 3
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 1


	let            shift, and enter state 2


State 2

	Expr -> let . var '=' Expr in Expr                  (rule 1)

	var            shift, and enter state 43


State 3

	%start_parseHasquelito -> Expr .                    (rule 0)
	Expr -> Expr . "::" TypeExp "->" TypeExp            (rule 3)
	Expr -> Expr . "==" Expr                            (rule 5)
	Expr -> Expr . ">=" Expr                            (rule 6)
	Expr -> Expr . "<=" Expr                            (rule 7)
	Expr -> Expr . "/=" Expr                            (rule 8)
	Expr -> Expr . '>' Expr                             (rule 9)
	Expr -> Expr . '<' Expr                             (rule 10)
	Expr -> Expr . "&&" Expr                            (rule 11)
	Expr -> Expr . "||" Expr                            (rule 12)
	Expr -> Expr . ':' Expr                             (rule 13)
	Expr -> Expr . "++" Expr                            (rule 14)

	"::"           shift, and enter state 32
	"&&"           shift, and enter state 33
	"||"           shift, and enter state 34
	"=="           shift, and enter state 35
	">="           shift, and enter state 36
	"<="           shift, and enter state 37
	"/="           shift, and enter state 38
	'>'            shift, and enter state 39
	'<'            shift, and enter state 40
	':'            shift, and enter state 41
	"++"           shift, and enter state 42
	%eof           accept


State 4

	Expr -> Form .                                      (rule 16)
	Form -> Form . '+' Form                             (rule 17)
	Form -> Form . '-' Form                             (rule 18)
	Form -> Form . '*' Form                             (rule 19)
	Form -> Form . '/' Form                             (rule 20)

	in             reduce using rule 16
	then           reduce using rule 16
	else           reduce using rule 16
	"::"           reduce using rule 16
	"&&"           reduce using rule 16
	"||"           reduce using rule 16
	'+'            shift, and enter state 28
	'-'            shift, and enter state 29
	'*'            shift, and enter state 30
	'/'            shift, and enter state 31
	"=="           reduce using rule 16
	">="           reduce using rule 16
	"<="           reduce using rule 16
	"/="           reduce using rule 16
	'>'            reduce using rule 16
	'<'            reduce using rule 16
	')'            reduce using rule 16
	':'            reduce using rule 16
	"++"           reduce using rule 16
	%eof           reduce using rule 16


State 5

	Form -> Juxt .                                      (rule 21)
	Juxt -> Juxt . Atom                                 (rule 22)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	in             reduce using rule 21
	then           reduce using rule 21
	else           reduce using rule 21
	"::"           reduce using rule 21
	"&&"           reduce using rule 21
	"||"           reduce using rule 21
	'+'            reduce using rule 21
	'-'            reduce using rule 21
	'*'            reduce using rule 21
	'/'            reduce using rule 21
	"=="           reduce using rule 21
	">="           reduce using rule 21
	"<="           reduce using rule 21
	"/="           reduce using rule 21
	'>'            reduce using rule 21
	'<'            reduce using rule 21
	'('            shift, and enter state 16
	')'            reduce using rule 21
	var            shift, and enter state 17
	':'            reduce using rule 21
	"++"           reduce using rule 21
	%eof           reduce using rule 21

	Atom           goto state 27

State 6

	Juxt -> Atom .                                      (rule 26)

	int            reduce using rule 26
	float          reduce using rule 26
	bool           reduce using rule 26
	in             reduce using rule 26
	then           reduce using rule 26
	else           reduce using rule 26
	"::"           reduce using rule 26
	"&&"           reduce using rule 26
	"||"           reduce using rule 26
	'+'            reduce using rule 26
	'-'            reduce using rule 26
	'*'            reduce using rule 26
	'/'            reduce using rule 26
	"=="           reduce using rule 26
	">="           reduce using rule 26
	"<="           reduce using rule 26
	"/="           reduce using rule 26
	'>'            reduce using rule 26
	'<'            reduce using rule 26
	'('            reduce using rule 26
	')'            reduce using rule 26
	var            reduce using rule 26
	':'            reduce using rule 26
	"++"           reduce using rule 26
	%eof           reduce using rule 26


State 7

	Expr -> List .                                      (rule 15)

	in             reduce using rule 15
	then           reduce using rule 15
	else           reduce using rule 15
	"::"           reduce using rule 15
	"&&"           reduce using rule 15
	"||"           reduce using rule 15
	"=="           reduce using rule 15
	">="           reduce using rule 15
	"<="           reduce using rule 15
	"/="           reduce using rule 15
	'>'            reduce using rule 15
	'<'            reduce using rule 15
	')'            reduce using rule 15
	':'            reduce using rule 15
	"++"           reduce using rule 15
	%eof           reduce using rule 15


State 8

	Atom -> int .                                       (rule 28)

	int            reduce using rule 28
	float          reduce using rule 28
	bool           reduce using rule 28
	in             reduce using rule 28
	then           reduce using rule 28
	else           reduce using rule 28
	"::"           reduce using rule 28
	"&&"           reduce using rule 28
	"||"           reduce using rule 28
	'+'            reduce using rule 28
	'-'            reduce using rule 28
	'*'            reduce using rule 28
	'/'            reduce using rule 28
	"=="           reduce using rule 28
	">="           reduce using rule 28
	"<="           reduce using rule 28
	"/="           reduce using rule 28
	'>'            reduce using rule 28
	'<'            reduce using rule 28
	'('            reduce using rule 28
	')'            reduce using rule 28
	var            reduce using rule 28
	']'            reduce using rule 28
	':'            reduce using rule 28
	','            reduce using rule 28
	"++"           reduce using rule 28
	%eof           reduce using rule 28


State 9

	Atom -> float .                                     (rule 30)

	int            reduce using rule 30
	float          reduce using rule 30
	bool           reduce using rule 30
	in             reduce using rule 30
	then           reduce using rule 30
	else           reduce using rule 30
	"::"           reduce using rule 30
	"&&"           reduce using rule 30
	"||"           reduce using rule 30
	'+'            reduce using rule 30
	'-'            reduce using rule 30
	'*'            reduce using rule 30
	'/'            reduce using rule 30
	"=="           reduce using rule 30
	">="           reduce using rule 30
	"<="           reduce using rule 30
	"/="           reduce using rule 30
	'>'            reduce using rule 30
	'<'            reduce using rule 30
	'('            reduce using rule 30
	')'            reduce using rule 30
	var            reduce using rule 30
	']'            reduce using rule 30
	':'            reduce using rule 30
	','            reduce using rule 30
	"++"           reduce using rule 30
	%eof           reduce using rule 30


State 10

	Atom -> bool .                                      (rule 29)

	int            reduce using rule 29
	float          reduce using rule 29
	bool           reduce using rule 29
	in             reduce using rule 29
	then           reduce using rule 29
	else           reduce using rule 29
	"::"           reduce using rule 29
	"&&"           reduce using rule 29
	"||"           reduce using rule 29
	'+'            reduce using rule 29
	'-'            reduce using rule 29
	'*'            reduce using rule 29
	'/'            reduce using rule 29
	"=="           reduce using rule 29
	">="           reduce using rule 29
	"<="           reduce using rule 29
	"/="           reduce using rule 29
	'>'            reduce using rule 29
	'<'            reduce using rule 29
	'('            reduce using rule 29
	')'            reduce using rule 29
	var            reduce using rule 29
	']'            reduce using rule 29
	':'            reduce using rule 29
	','            reduce using rule 29
	"++"           reduce using rule 29
	%eof           reduce using rule 29


State 11

	Expr -> if . Expr then Expr else Expr               (rule 4)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	if             shift, and enter state 11
	'\\'           shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18

	Expr           goto state 26
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 12

	Expr -> '\\' . var "->" Expr                        (rule 2)

	var            shift, and enter state 25


State 13

	Juxt -> '-' . Atom                                  (rule 25)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	'('            shift, and enter state 16
	var            shift, and enter state 17

	Atom           goto state 24

State 14

	Juxt -> quot . Atom Atom                            (rule 23)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	'('            shift, and enter state 16
	var            shift, and enter state 17

	Atom           goto state 23

State 15

	Juxt -> rem . Atom Atom                             (rule 24)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	'('            shift, and enter state 16
	var            shift, and enter state 17

	Atom           goto state 22

State 16

	Atom -> '(' . Expr ')'                              (rule 27)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	if             shift, and enter state 11
	'\\'           shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18

	Expr           goto state 21
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 17

	Atom -> var .                                       (rule 31)

	int            reduce using rule 31
	float          reduce using rule 31
	bool           reduce using rule 31
	in             reduce using rule 31
	then           reduce using rule 31
	else           reduce using rule 31
	"::"           reduce using rule 31
	"&&"           reduce using rule 31
	"||"           reduce using rule 31
	'+'            reduce using rule 31
	'-'            reduce using rule 31
	'*'            reduce using rule 31
	'/'            reduce using rule 31
	"=="           reduce using rule 31
	">="           reduce using rule 31
	"<="           reduce using rule 31
	"/="           reduce using rule 31
	'>'            reduce using rule 31
	'<'            reduce using rule 31
	'('            reduce using rule 31
	')'            reduce using rule 31
	var            reduce using rule 31
	']'            reduce using rule 31
	':'            reduce using rule 31
	','            reduce using rule 31
	"++"           reduce using rule 31
	%eof           reduce using rule 31


State 18

	List -> '[' . ListMembers ']'                       (rule 38)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	'('            shift, and enter state 16
	var            shift, and enter state 17
	']'            reduce using rule 39

	Atom           goto state 19
	ListMembers    goto state 20

State 19

	ListMembers -> Atom .                               (rule 40)
	ListMembers -> Atom . ',' ListMembers               (rule 41)

	']'            reduce using rule 40
	','            shift, and enter state 71


State 20

	List -> '[' ListMembers . ']'                       (rule 38)

	']'            shift, and enter state 70


State 21

	Expr -> Expr . "::" TypeExp "->" TypeExp            (rule 3)
	Expr -> Expr . "==" Expr                            (rule 5)
	Expr -> Expr . ">=" Expr                            (rule 6)
	Expr -> Expr . "<=" Expr                            (rule 7)
	Expr -> Expr . "/=" Expr                            (rule 8)
	Expr -> Expr . '>' Expr                             (rule 9)
	Expr -> Expr . '<' Expr                             (rule 10)
	Expr -> Expr . "&&" Expr                            (rule 11)
	Expr -> Expr . "||" Expr                            (rule 12)
	Expr -> Expr . ':' Expr                             (rule 13)
	Expr -> Expr . "++" Expr                            (rule 14)
	Atom -> '(' Expr . ')'                              (rule 27)

	"::"           shift, and enter state 32
	"&&"           shift, and enter state 33
	"||"           shift, and enter state 34
	"=="           shift, and enter state 35
	">="           shift, and enter state 36
	"<="           shift, and enter state 37
	"/="           shift, and enter state 38
	'>'            shift, and enter state 39
	'<'            shift, and enter state 40
	')'            shift, and enter state 69
	':'            shift, and enter state 41
	"++"           shift, and enter state 42


State 22

	Juxt -> rem Atom . Atom                             (rule 24)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	'('            shift, and enter state 16
	var            shift, and enter state 17

	Atom           goto state 68

State 23

	Juxt -> quot Atom . Atom                            (rule 23)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	'('            shift, and enter state 16
	var            shift, and enter state 17

	Atom           goto state 67

State 24

	Juxt -> '-' Atom .                                  (rule 25)

	int            reduce using rule 25
	float          reduce using rule 25
	bool           reduce using rule 25
	in             reduce using rule 25
	then           reduce using rule 25
	else           reduce using rule 25
	"::"           reduce using rule 25
	"&&"           reduce using rule 25
	"||"           reduce using rule 25
	'+'            reduce using rule 25
	'-'            reduce using rule 25
	'*'            reduce using rule 25
	'/'            reduce using rule 25
	"=="           reduce using rule 25
	">="           reduce using rule 25
	"<="           reduce using rule 25
	"/="           reduce using rule 25
	'>'            reduce using rule 25
	'<'            reduce using rule 25
	'('            reduce using rule 25
	')'            reduce using rule 25
	var            reduce using rule 25
	':'            reduce using rule 25
	"++"           reduce using rule 25
	%eof           reduce using rule 25


State 25

	Expr -> '\\' var . "->" Expr                        (rule 2)

	"->"           shift, and enter state 66


State 26

	Expr -> Expr . "::" TypeExp "->" TypeExp            (rule 3)
	Expr -> if Expr . then Expr else Expr               (rule 4)
	Expr -> Expr . "==" Expr                            (rule 5)
	Expr -> Expr . ">=" Expr                            (rule 6)
	Expr -> Expr . "<=" Expr                            (rule 7)
	Expr -> Expr . "/=" Expr                            (rule 8)
	Expr -> Expr . '>' Expr                             (rule 9)
	Expr -> Expr . '<' Expr                             (rule 10)
	Expr -> Expr . "&&" Expr                            (rule 11)
	Expr -> Expr . "||" Expr                            (rule 12)
	Expr -> Expr . ':' Expr                             (rule 13)
	Expr -> Expr . "++" Expr                            (rule 14)

	then           shift, and enter state 65
	"::"           shift, and enter state 32
	"&&"           shift, and enter state 33
	"||"           shift, and enter state 34
	"=="           shift, and enter state 35
	">="           shift, and enter state 36
	"<="           shift, and enter state 37
	"/="           shift, and enter state 38
	'>'            shift, and enter state 39
	'<'            shift, and enter state 40
	':'            shift, and enter state 41
	"++"           shift, and enter state 42


State 27

	Juxt -> Juxt Atom .                                 (rule 22)

	int            reduce using rule 22
	float          reduce using rule 22
	bool           reduce using rule 22
	in             reduce using rule 22
	then           reduce using rule 22
	else           reduce using rule 22
	"::"           reduce using rule 22
	"&&"           reduce using rule 22
	"||"           reduce using rule 22
	'+'            reduce using rule 22
	'-'            reduce using rule 22
	'*'            reduce using rule 22
	'/'            reduce using rule 22
	"=="           reduce using rule 22
	">="           reduce using rule 22
	"<="           reduce using rule 22
	"/="           reduce using rule 22
	'>'            reduce using rule 22
	'<'            reduce using rule 22
	'('            reduce using rule 22
	')'            reduce using rule 22
	var            reduce using rule 22
	':'            reduce using rule 22
	"++"           reduce using rule 22
	%eof           reduce using rule 22


State 28

	Form -> Form '+' . Form                             (rule 17)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17

	Form           goto state 64
	Juxt           goto state 5
	Atom           goto state 6

State 29

	Form -> Form '-' . Form                             (rule 18)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17

	Form           goto state 63
	Juxt           goto state 5
	Atom           goto state 6

State 30

	Form -> Form '*' . Form                             (rule 19)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17

	Form           goto state 62
	Juxt           goto state 5
	Atom           goto state 6

State 31

	Form -> Form '/' . Form                             (rule 20)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17

	Form           goto state 61
	Juxt           goto state 5
	Atom           goto state 6

State 32

	Expr -> Expr "::" . TypeExp "->" TypeExp            (rule 3)

	Int            shift, and enter state 57
	Bool           shift, and enter state 58
	Float          shift, and enter state 59
	'('            shift, and enter state 60

	TypeExp        goto state 55
	PrimType       goto state 56

State 33

	Expr -> Expr "&&" . Expr                            (rule 11)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	if             shift, and enter state 11
	'\\'           shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18

	Expr           goto state 54
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 34

	Expr -> Expr "||" . Expr                            (rule 12)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	if             shift, and enter state 11
	'\\'           shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18

	Expr           goto state 53
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 35

	Expr -> Expr "==" . Expr                            (rule 5)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	if             shift, and enter state 11
	'\\'           shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18

	Expr           goto state 52
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 36

	Expr -> Expr ">=" . Expr                            (rule 6)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	if             shift, and enter state 11
	'\\'           shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18

	Expr           goto state 51
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 37

	Expr -> Expr "<=" . Expr                            (rule 7)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	if             shift, and enter state 11
	'\\'           shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18

	Expr           goto state 50
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 38

	Expr -> Expr "/=" . Expr                            (rule 8)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	if             shift, and enter state 11
	'\\'           shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18

	Expr           goto state 49
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 39

	Expr -> Expr '>' . Expr                             (rule 9)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	if             shift, and enter state 11
	'\\'           shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18

	Expr           goto state 48
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 40

	Expr -> Expr '<' . Expr                             (rule 10)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	if             shift, and enter state 11
	'\\'           shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18

	Expr           goto state 47
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 41

	Expr -> Expr ':' . Expr                             (rule 13)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	if             shift, and enter state 11
	'\\'           shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18

	Expr           goto state 46
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 42

	Expr -> Expr "++" . Expr                            (rule 14)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	if             shift, and enter state 11
	'\\'           shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18

	Expr           goto state 45
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 43

	Expr -> let var . '=' Expr in Expr                  (rule 1)

	'='            shift, and enter state 44


State 44

	Expr -> let var '=' . Expr in Expr                  (rule 1)

	int            shift, and enter state 8
	float          shift, and enter state 9
	bool           shift, and enter state 10
	let            shift, and enter state 2
	if             shift, and enter state 11
	'\\'           shift, and enter state 12
	'-'            shift, and enter state 13
	quot           shift, and enter state 14
	rem            shift, and enter state 15
	'('            shift, and enter state 16
	var            shift, and enter state 17
	'['            shift, and enter state 18

	Expr           goto state 77
	Form           goto state 4
	Juxt           goto state 5
	Atom           goto state 6
	List           goto state 7

State 45

	Expr -> Expr . "::" TypeExp "->" TypeExp            (rule 3)
	Expr -> Expr . "==" Expr                            (rule 5)
	Expr -> Expr . ">=" Expr                            (rule 6)
	Expr -> Expr . "<=" Expr                            (rule 7)
	Expr -> Expr . "/=" Expr                            (rule 8)
	Expr -> Expr . '>' Expr                             (rule 9)
	Expr -> Expr . '<' Expr                             (rule 10)
	Expr -> Expr . "&&" Expr                            (rule 11)
	Expr -> Expr . "||" Expr                            (rule 12)
	Expr -> Expr . ':' Expr                             (rule 13)
	Expr -> Expr . "++" Expr                            (rule 14)
	Expr -> Expr "++" Expr .                            (rule 14)

	in             reduce using rule 14
	then           reduce using rule 14
	else           reduce using rule 14
	"::"           reduce using rule 14
	"&&"           reduce using rule 14
	"||"           reduce using rule 14
	"=="           reduce using rule 14
	">="           reduce using rule 14
	"<="           reduce using rule 14
	"/="           reduce using rule 14
	'>'            reduce using rule 14
	'<'            reduce using rule 14
	')'            reduce using rule 14
	':'            shift, and enter state 41
	"++"           shift, and enter state 42
	%eof           reduce using rule 14


State 46

	Expr -> Expr . "::" TypeExp "->" TypeExp            (rule 3)
	Expr -> Expr . "==" Expr                            (rule 5)
	Expr -> Expr . ">=" Expr                            (rule 6)
	Expr -> Expr . "<=" Expr                            (rule 7)
	Expr -> Expr . "/=" Expr                            (rule 8)
	Expr -> Expr . '>' Expr                             (rule 9)
	Expr -> Expr . '<' Expr                             (rule 10)
	Expr -> Expr . "&&" Expr                            (rule 11)
	Expr -> Expr . "||" Expr                            (rule 12)
	Expr -> Expr . ':' Expr                             (rule 13)
	Expr -> Expr ':' Expr .                             (rule 13)
	Expr -> Expr . "++" Expr                            (rule 14)

	in             reduce using rule 13
	then           reduce using rule 13
	else           reduce using rule 13
	"::"           reduce using rule 13
	"&&"           reduce using rule 13
	"||"           reduce using rule 13
	"=="           reduce using rule 13
	">="           reduce using rule 13
	"<="           reduce using rule 13
	"/="           reduce using rule 13
	'>'            reduce using rule 13
	'<'            reduce using rule 13
	')'            reduce using rule 13
	':'            shift, and enter state 41
	"++"           shift, and enter state 42
	%eof           reduce using rule 13


State 47

	Expr -> Expr . "::" TypeExp "->" TypeExp            (rule 3)
	Expr -> Expr . "==" Expr                            (rule 5)
	Expr -> Expr . ">=" Expr                            (rule 6)
	Expr -> Expr . "<=" Expr                            (rule 7)
	Expr -> Expr . "/=" Expr                            (rule 8)
	Expr -> Expr . '>' Expr                             (rule 9)
	Expr -> Expr . '<' Expr                             (rule 10)
	Expr -> Expr '<' Expr .                             (rule 10)
	Expr -> Expr . "&&" Expr                            (rule 11)
	Expr -> Expr . "||" Expr                            (rule 12)
	Expr -> Expr . ':' Expr                             (rule 13)
	Expr -> Expr . "++" Expr                            (rule 14)

	in             reduce using rule 10
	then           reduce using rule 10
	else           reduce using rule 10
	"::"           shift, and enter state 32
	"&&"           shift, and enter state 33
	"||"           shift, and enter state 34
	"=="           fail
	">="           fail
	"<="           fail
	"/="           fail
	'>'            fail
	'<'            fail
	')'            reduce using rule 10
	':'            shift, and enter state 41
	"++"           shift, and enter state 42
	%eof           reduce using rule 10


State 48

	Expr -> Expr . "::" TypeExp "->" TypeExp            (rule 3)
	Expr -> Expr . "==" Expr                            (rule 5)
	Expr -> Expr . ">=" Expr                            (rule 6)
	Expr -> Expr . "<=" Expr                            (rule 7)
	Expr -> Expr . "/=" Expr                            (rule 8)
	Expr -> Expr . '>' Expr                             (rule 9)
	Expr -> Expr '>' Expr .                             (rule 9)
	Expr -> Expr . '<' Expr                             (rule 10)
	Expr -> Expr . "&&" Expr                            (rule 11)
	Expr -> Expr . "||" Expr                            (rule 12)
	Expr -> Expr . ':' Expr                             (rule 13)
	Expr -> Expr . "++" Expr                            (rule 14)

	in             reduce using rule 9
	then           reduce using rule 9
	else           reduce using rule 9
	"::"           shift, and enter state 32
	"&&"           shift, and enter state 33
	"||"           shift, and enter state 34
	"=="           fail
	">="           fail
	"<="           fail
	"/="           fail
	'>'            fail
	'<'            fail
	')'            reduce using rule 9
	':'            shift, and enter state 41
	"++"           shift, and enter state 42
	%eof           reduce using rule 9


State 49

	Expr -> Expr . "::" TypeExp "->" TypeExp            (rule 3)
	Expr -> Expr . "==" Expr                            (rule 5)
	Expr -> Expr . ">=" Expr                            (rule 6)
	Expr -> Expr . "<=" Expr                            (rule 7)
	Expr -> Expr . "/=" Expr                            (rule 8)
	Expr -> Expr "/=" Expr .                            (rule 8)
	Expr -> Expr . '>' Expr                             (rule 9)
	Expr -> Expr . '<' Expr                             (rule 10)
	Expr -> Expr . "&&" Expr                            (rule 11)
	Expr -> Expr . "||" Expr                            (rule 12)
	Expr -> Expr . ':' Expr                             (rule 13)
	Expr -> Expr . "++" Expr                            (rule 14)
